--- a/_mobile.scss
+++ b/_mobile.scss
@@ -3,16 +3,16 @@
    body {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    
    }
         
     .center {
         padding-right: 16px;
+        padding-left: 16px;
     }
    
     .head__top {
-        height: 648px;
-       
+        align-items: center;
     }
     .title {
         width: 262px;
@@ -22,7 +22,6 @@
         font-size: 40px;
         text-align: center;
         vertical-align: middle;
-        margin-left: 40.5px;
         padding-top: 147px;
     }
     .name {
@@ -35,7 +34,6 @@
         text-align: center;
         vertical-align: middle;
         margin-left: 23.5px;
-        padding-bottom: 36px;
         line-height: 100%;
     }
     .lets {
@@ -50,7 +48,7 @@
         line-height: 142%;
         letter-spacing: 0%;
         text-align: center;
-
+        margin-top: 36px;
 }
     .star {
         width: 18px;
@@ -101,7 +99,7 @@
     .min {
         height: 3740px;
         padding-bottom: 9px;
-        padding-left: 16px;
+       
     }
     .top__titles {
         width: 250px;
@@ -281,7 +279,6 @@
     }
     .footer {
         height: 100px;
-        padding-left: 16px;
     } 
     .footer__law {
         width: 190px;
